YAML/cryptoapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: cryptoapp
  name: cryptoapp
  namespace: cryptoapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cryptoapp
  strategy: {}
  template:
    metadata:
      annotations:
        linkerd.io/injected: enabled
      creationTimestamp: null
      labels:
        app: cryptoapp
    spec:
      containers:
      - image: docker.io/fabianbrash/cryptoapp-serve:0.0.5
        name: cryptoapp
        ports: 
        - containerPort: 5000
        resources: {}
