YAML/cryptoapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  crypto-fb-com-svc
  namespace: cryptoapp
spec:
  selector:
    app: cryptoapp
  type: ClusterIP
  ports:
  - name: http
    port: 5000
    targetPort: 5000
